# Base-Smart-Contract

./: .gitpod.Dockerfile  .gitpod.yml  Cargo.toml  Makefile  README.md  build.rs  rust-toolchain.toml
.github/workflows/: gitpod-image.yml
app/: Cargo.toml
app/src/: lib.rs
app/src/services/: contract_service.rs
client/: Cargo.toml  build.rs  contract_client.idl
client/src/: contract_client.rs  lib.rs
contract/: Cargo.toml
contract/src/: lib.rs
contract/src/services/: contract_service.rs
contract/src/state/: contract_state.rs  mod.rs
contract/src/utils/: mod.rs
src/: lib.rs
tests/: Cargo.toml  gtest.rs  node_test.rs  test.rs  utils.rs
tests/fixture/: mod.rs
tests/fixture_node/: mod.rs
tests/src/: contract_tests.rs  lib.rs  utils.rs
wasm/: Cargo.toml  build.rs
wasm/src/: lib.rs
