[package]
name = "contract"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = ["client", "app"]

[workspace.dependencies]
sails-rs = "0.10.2"
sails-idl-gen = "0.10.2"
sails-client-gen = "0.10.2"
tokio = { version = "1.41", features = ["rt", "macros"] }
mockall = "0.13.1"

[dependencies]
contract-client = { path = "client", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
contract-app = { path = "app" }

[build-dependencies]
contract-app = { path = "app" }
sails-rs = { version = "0.10.2", features = ["wasm-builder"] }
sails-idl-gen = "0.10.2"
sails-client-gen = "0.10.2"

[dev-dependencies]
contract = { path = ".", features = ["wasm-binary", "contract-client"] }
sails-rs = { version = "0.10.2", features = ["gtest", "gclient"] }
tokio = { version = "1.41", features = ["rt", "macros"] }
gstd = "1.10.0"
gclient = "1.10.0"
gear-core = "1.10.0"
rand = "0.9.2"

[features]
wasm-binary = []
std = []
contract-client = ["dep:contract-client"]
