[package]
name = "client"
version.workspace = true
edition.workspace = true

[dependencies]
mockall = {workspace = true, optional = true}
sails-rs.workspace = true

[build-dependencies]
contract.workspace = true
sails-client-gen.workspace = true
sails-idl-gen.workspace = true

[features]
mocks = ["sails-rs/mockall", "dep:mockall"]