[package]
name = "contract-client"
version = "0.1.0"
edition = "2021"

[dependencies]
mockall = { workspace = true, optional = true }
sails-rs.workspace = true

[build-dependencies]
contract-app = { path = "../app" }
sails-rs = { workspace = true, features = [ "build" ]}
# sails-client-gen.workspace = true
# sails-idl-gen.workspace = true

[features]
mocks = ["sails-rs/mockall", "dep:mockall"]
